# viol

./: .gitignore  README.md  dev-tools.py  pyproject.toml
docs/md/: cheat_sheet.md  documentation_tracker.md  quick_reference.md  tutorial_example.md
docs/source/: api_docs.rst  conf.py  contributing.rst  index.rst
docs/source/api/: modules.rst  server.rst  src.rst  src.viol.bootstrap.rst  src.viol.core.rst  src.viol.html.rst  src.viol.rst  src.viol.utils.rst  viol.bootstrap.rst  viol.core.rst  viol.html.rst  viol.rst  viol.utils.rst
docs/source/api/bootstrap/: accordion.rst  alert.rst  index.rst  navbar.rst
docs/source/api/core/: base.rst  index.rst
docs/source/api/html/: a.rst  button.rst  div.rst  doctype.rst  form.rst  head.rst  header.rst  html.rst  index.rst  li.rst  link.rst  nav.rst  ol.rst  span.rst  style.rst  ul.rst
docs/source/api/utils/: collections.rst  index.rst
docs/source/examples/: accordion.rst  layout.rst  navbar.rst  simple_demo.rst
example/: accordion.py  chat.py  html_basic_demo.py  html_bootstrap_demo.py  layout.py  simple_demo.py
examples/: chat.py  counter_app.py  custom_components.py  data_driven_app.py  form_validation.py  html_bootstrap_demo.py  html_table.py  multi_page_app.py  navbar.py  run_examples.py  todo_app.py
examples/bootstrap/: app.py  run.py
examples/bootstrap/components/: breadcrumb.py  navbar.py
examples/chat/: __main__.py
scratch/: html_basic_demo.py  html_bootstrap_demo.py
scratch/chat/: models.py  requirements.txt  users.py
src/corex/: __init__.py  app.py  component.py  components.py  server.py
src/corex/components/: button.py  navbar.py
src/corex/templates/: index.html
src/viol/: __init__.py  core.py  layout.py  server.py
src/viol/bootstrap/: __init__.py  accordion.py  alert.py  alerts.py  badge.py  breadcrumb.py  button_group.py  buttons.py  card.py  carousel.py  close_button.py  collapse.py  dropdowns.py  list_group.py  modal.py  navbar.py  navs_tabs.py  offcanvas.py  pagination.py  progress.py  toasts.py
src/viol/components/: button.py  navbar.py
src/viol/core/: __init__.py  attributes.py  attrs.py  base.py  element.py  events.py
src/viol/elements/: __init__.py  a.py  button.py  div.py  form.py  header.py  li.py  ol.py  span.py
src/viol/html/: HTMLElements.csv  __init__.py  button.py  doctype.py  elements.py  elements_gen.py  head.py  html.py  link.py  nav.py  span.py  style.py  ul.py
src/viol/static/js/: htmx-bootstrap.js
src/viol/templates/: index.html
src/viol/utils/: collections.py
tests/: test_app.py  test_component.py
