[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corex"
dynamic = ["version"]
description = 'An application building platform on top of Flask and HTMLX.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["flask", "htmx", "components", "web", "framework"]
authors = [
    { name = "Yasas Senarath", email = "12231659+ysenarath@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "flask>=2.0.0",
    "werkzeug>=2.0.0",
]

[project.urls]
Documentation = "https://github.com/Yasas Senarath/corex#readme"
Issues = "https://github.com/Yasas Senarath/corex/issues"
Source = "https://github.com/Yasas Senarath/corex"

[tool.hatch.version]
path = "src/corex/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=corex {args:tests}"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/corex tests}"

[tool.coverage.run]
source_pkgs = ["corex", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
corex = ["src/corex", "*/corex/src/corex"]
tests = ["tests", "*/corex/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
