[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viol"
dynamic = ["version"]
description = 'An application building platform on top of Flask and HTMLX.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
    { name = "Yasas Senarath", email = "12231659+ysenarath@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["flask>=3.0.3"]

[project.urls]
Documentation = "https://github.com/ysenarath/viol#readme"
Issues = "https://github.com/ysenarath/viol/issues"
Source = "https://github.com/ysenarath/viol"

[tool.hatch.version]
path = "src/viol/__init__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/viol tests}"

[tool.coverage.run]
source_pkgs = ["viol", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
viol = ["src/viol", "*/viol/src/viol"]
tests = ["tests", "*/viol/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
